support +xyz line number as first argument

CHANGELOG: Kate/KWrite supports 'kate +123 test.txt' to jump to the given line

BUG: 501362